force-app/main/default/objects/Contact/fields/Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>Academic_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic Organization</label>
    <type>Checkbox</type>
</CustomField>