force-app/main/default/objects/Contact/fields/Active_Program__c.field-meta.xml
<CustomField>
    <fullName>Active_Program__c</fullName>
    <label>Active Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>