force-app/main/default/objects/Contact/fields/ACUI_Contact__c.field-meta.xml
<CustomField>
    <fullName>ACUI_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACUI Contact?</label>
    <type>Checkbox</type>
</CustomField>