force-app/main/default/objects/Contact/fields/Amazon_Prime_membership_status__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Prime_membership_status__c</fullName>
    <label>Amazon Prime membership status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have my own Prime Student membership</fullName>
            </value>
            <value>
                <fullName>I use my parent&apos;s Prime membership</fullName>
            </value>
            <value>
                <fullName>I use a friend&apos;s Prime or Prime Student membership</fullName>
            </value>
            <value>
                <fullName>I do not currently use Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>