force-app/main/default/objects/Contact/fields/Application_Completed_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_Lead_ID__c</fullName>
    <label>Application Completed Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>