force-app/main/default/objects/Contact/fields/Athletics__c.field-meta.xml
<CustomField>
    <fullName>Athletics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Athletics</label>
    <type>Checkbox</type>
</CustomField>