force-app/main/default/objects/Contact/fields/Average_Amount_of_Time_Spent_on_Campus__c.field-meta.xml
<CustomField>
    <fullName>Average_Amount_of_Time_Spent_on_Campus__c</fullName>
    <label>Average Amount of Time Spent on Campus</label>
    <length>200</length>
    <type>Text</type>
</CustomField>