force-app/main/default/objects/Contact/fields/Best_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Contact</label>
    <type>Checkbox</type>
</CustomField>