force-app/main/default/objects/Contact/fields/Blog_Link__c.field-meta.xml
<CustomField>
    <fullName>Blog_Link__c</fullName>
    <label>Blog Link</label>
    <type>Url</type>
</CustomField>