force-app/main/default/objects/Contact/fields/Campus_Address__c.field-meta.xml
<CustomField>
    <fullName>Campus_Address__c</fullName>
    <label>Campus Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>