force-app/main/default/objects/Contact/fields/Campus_Address_cont__c.field-meta.xml
<CustomField>
    <fullName>Campus_Address_cont__c</fullName>
    <label>Campus Address (cont.)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>