force-app/main/default/objects/Contact/fields/Campus_City__c.field-meta.xml
<CustomField>
    <fullName>Campus_City__c</fullName>
    <label>Campus City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>