force-app/main/default/objects/Contact/fields/Campus_Country__c.field-meta.xml
<CustomField>
    <fullName>Campus_Country__c</fullName>
    <label>Campus Country</label>
    <length>28</length>
    <type>Text</type>
</CustomField>