force-app/main/default/objects/Contact/fields/Campus_Involvement_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Campus_Involvement_Ranking__c</fullName>
    <formula>IF(Greek_Life__c = True, 8, 0) + IF(Program_Board__c = True, 8, 0) + IF(Student_Goverment__c = True, 8, 0) + IF(Marketing_Association__c = True, 2, 0) + IF(Academic_Organization__c = True, 2, 0) + IF(Sports__c = True, 1, 0) + IF(Intramurals__c = True, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus Involvement Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>