force-app/main/default/objects/Contact/fields/Campus_State__c.field-meta.xml
<CustomField>
    <fullName>Campus_State__c</fullName>
    <label>Campus State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>