force-app/main/default/objects/Contact/fields/Campus_Zip__c.field-meta.xml
<CustomField>
    <fullName>Campus_Zip__c</fullName>
    <label>Campus Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>