force-app/main/default/objects/Contact/fields/CampusInfluence_Status__c.field-meta.xml
<CustomField>
    <fullName>CampusInfluence_Status__c</fullName>
    <label>MailChimp Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Cleaned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>