force-app/main/default/objects/Contact/fields/CE_Status__c.field-meta.xml
<CustomField>
    <fullName>CE_Status__c</fullName>
    <label>R&amp;B Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring 2019 Amazon Prime Student Applicant</fullName>
            </value>
            <value>
                <fullName>Spring 2019 R&amp;B General Applicant</fullName>
            </value>
            <value>
                <fullName>Fall 2018 - Spring 2019 Vera Bradley Applicant</fullName>
            </value>
            <value>
                <fullName>Fall 2018 - Spring 2019 Amazon Prime Student Ambassador</fullName>
            </value>
            <value>
                <fullName>Spring 2018 SweeTARTS Campus Brand Ambassador</fullName>
            </value>
            <value>
                <fullName>Spring 2018 Dunkin&apos; Donuts Student Influencer</fullName>
            </value>
            <value>
                <fullName>Spring 2018 Zipcar Digital Content Creator</fullName>
            </value>
            <value>
                <fullName>2018-2019 Amazon Prime Student Applicant</fullName>
            </value>
            <value>
                <fullName>2018-2019 Amazon Prime Student Ambassador</fullName>
            </value>
            <value>
                <fullName>Spring 2018 Wall Street Journal Brand Advocate</fullName>
            </value>
            <value>
                <fullName>Spring 2018 FORTO Coffee Student Influencer</fullName>
            </value>
            <value>
                <fullName>Spring 2018 FORTO Coffee Sales Intern</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Wall Street Journal Student Brand Advocate</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Starry Ambassador</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Nesquik Ambassador</fullName>
            </value>
            <value>
                <fullName>Fall 2017 MARS Insights Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Microsoft Campus Rep Applicant</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Ten Task Interviewee</fullName>
            </value>
            <value>
                <fullName>Fall 2017 SweeTARTS Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Microsoft Campus Rep</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 LaCroix Ambassador</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Vera Bradley Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Comcast Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Sprint Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Staples Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 Zipcar Promoter</fullName>
            </value>
            <value>
                <fullName>Fall 2017 - Spring 2018 Vera Bradley Applicant</fullName>
            </value>
            <value>
                <fullName>Summer 2017 Fluent General Applicant</fullName>
            </value>
            <value>
                <fullName>Summer 2017 Ten Task Interviewee</fullName>
            </value>
            <value>
                <fullName>Spring 2017 Fluent General Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>