force-app/main/default/objects/Contact/fields/COCA_member__c.field-meta.xml
<CustomField>
    <fullName>COCA_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COCA member?</label>
    <type>Checkbox</type>
</CustomField>