force-app/main/default/objects/Contact/fields/Confident_in_fulfilling_time_commitment__c.field-meta.xml
<CustomField>
    <fullName>Confident_in_fulfilling_time_commitment__c</fullName>
    <inlineHelpText>This position requires a serious time commitment of 6-8 hours per week, including daily communication with your Account Manager. How confident are you in fulfilling this commitment?</inlineHelpText>
    <label>Confident in fulfilling time commitment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completely confident</fullName>
            </value>
            <value>
                <fullName>Fairly confident</fullName>
            </value>
            <value>
                <fullName>Somewhat confident</fullName>
            </value>
            <value>
                <fullName>Slightly confident</fullName>
            </value>
            <value>
                <fullName>Not confident at all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>