force-app/main/default/objects/Contact/fields/Current_GPA__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA__c</fullName>
    <label>Current GPA</label>
    <type>TextArea</type>
</CustomField>