force-app/main/default/objects/Contact/fields/Current_Program_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_For_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Program For Automation</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>