force-app/main/default/objects/Contact/fields/Current_Program_Homework_Link__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Homework_Link__c</fullName>
    <formula>Current_Program_For_Email_Template__r.Homework_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Program Homework Link</label>
    <type>Text</type>
</CustomField>