force-app/main/default/objects/Contact/fields/Current_Program_Semester__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Semester__c</fullName>
    <formula>IF(CONTAINS( Current_Program_For_Email_Template__r.Name, &quot;Spring&quot;),MID(Current_Program_For_Email_Template__r.Name,FIND(Current_Program_For_Email_Template__r.Name,&quot;Spring&quot;),11),
IF(CONTAINS( Current_Program_For_Email_Template__r.Name, &quot;Summer&quot;),MID(Current_Program_For_Email_Template__r.Name,FIND(Current_Program_For_Email_Template__r.Name,&quot;Summer&quot;),11),
IF(CONTAINS( Current_Program_For_Email_Template__r.Name, &quot;Fall&quot;), MID(Current_Program_For_Email_Template__r.Name,FIND(Current_Program_For_Email_Template__r.Name,&quot;Fall&quot;),9),
IF(CONTAINS( Current_Program_For_Email_Template__r.Name, &quot;Winter&quot;),MID(Current_Program_For_Email_Template__r.Name,FIND(Current_Program_For_Email_Template__r.Name,&quot;Winter&quot;),11),&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Program Semester</label>
    <type>Text</type>
</CustomField>