force-app/main/default/objects/Contact/fields/Current_Program_Shipping_Form__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Shipping_Form__c</fullName>
    <formula>Current_Program_For_Email_Template__r.Shipping_Form__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Program Shipping Form</label>
    <type>Text</type>
</CustomField>