force-app/main/default/objects/Contact/fields/Describe_3_HBO_shows__c.field-meta.xml
<CustomField>
    <fullName>Describe_3_HBO_shows__c</fullName>
    <inlineHelpText>Choose 3 seemingly unrelated shows i.e. Euphoria, Sex and the City, Westworld and describe why they all live under the HBO umbrella.</inlineHelpText>
    <label>Describe 3 HBO shows:</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>