force-app/main/default/objects/Contact/fields/Describe_social_media_strategies__c.field-meta.xml
<CustomField>
    <fullName>Describe_social_media_strategies__c</fullName>
    <inlineHelpText>Choose two exciting digital campaigns or social media strategies you have noticed in the last two months and explain how they relate back to promoting HBO to your peers.</inlineHelpText>
    <label>Describe social media strategies:</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>