force-app/main/default/objects/Contact/fields/Discord_Username__c.field-meta.xml
<CustomField>
    <fullName>Discord_Username__c</fullName>
    <label>Discord Username</label>
    <type>TextArea</type>
</CustomField>