force-app/main/default/objects/Contact/fields/Eligible_For_Rehire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Rehire__c</fullName>
    <label>Eligible For Rehire?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consider other options</fullName>
            </value>
            <value>
                <fullName>Definitely</fullName>
            </value>
            <value>
                <fullName>Indecisive</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Very Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>