force-app/main/default/objects/Contact/fields/Eligible_to_work_in_Canada__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_work_in_Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible to work in Canada?</label>
    <type>Checkbox</type>
</CustomField>