force-app/main/default/objects/Contact/fields/Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <label>Email Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>