force-app/main/default/objects/Contact/fields/Facebook_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ranking__c</fullName>
    <formula>IF(
  of_Facebook_Friends__c &gt;= 600, 10, 
  IF(of_Facebook_Friends__c &gt;= 500, 7,
  IF(of_Facebook_Friends__c &gt;= 400, 5, 
  0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>