force-app/main/default/objects/Contact/fields/Facebook_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_User_ID__c</fullName>
    <label>Facebook User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>