force-app/main/default/objects/Contact/fields/Fall_21_Amazon_Housing_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Fall_21_Amazon_Housing_Form_Submitted__c</fullName>
    <label>Fall 21 Amazon Housing Form Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>