force-app/main/default/objects/Contact/fields/Family_Information__c.field-meta.xml
<CustomField>
    <fullName>Family_Information__c</fullName>
    <label>Family Information</label>
    <type>TextArea</type>
</CustomField>