force-app/main/default/objects/Contact/fields/Favorite_Sport_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sport_s_Team__c</fullName>
    <label>Favorite Sport(s) Team</label>
    <type>TextArea</type>
</CustomField>