force-app/main/default/objects/Contact/fields/Fluent_Agent_Referral__c.field-meta.xml
<CustomField>
    <fullName>Fluent_Agent_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Student was referred to Fluent through the Fluent Agent Program.</description>
    <label>Fluent Agent Referral</label>
    <type>Checkbox</type>
</CustomField>