force-app/main/default/objects/Contact/fields/Former_Amazon_Prime_Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Former_Amazon_Prime_Ambassador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former Amazon Prime Ambassador</label>
    <type>Checkbox</type>
</CustomField>