force-app/main/default/objects/Contact/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <label>Graduation Date (Historic - Do Not Use)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>