force-app/main/default/objects/Contact/fields/Graduation_Semester__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Semester__c</fullName>
    <label>Graduation Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>