force-app/main/default/objects/Contact/fields/Hobbies_Interests__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interests__c</fullName>
    <label>Hobbies &amp; Interests</label>
    <type>TextArea</type>
</CustomField>