force-app/main/default/objects/Contact/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <label>Home City</label>
    <type>TextArea</type>
</CustomField>