force-app/main/default/objects/Contact/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <type>TextArea</type>
</CustomField>