force-app/main/default/objects/Contact/fields/Home_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip_Postal_Code__c</fullName>
    <label>Home Zip/Postal Code</label>
    <type>TextArea</type>
</CustomField>