force-app/main/default/objects/Contact/fields/Housing_Plans__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plans__c</fullName>
    <label>Housing Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Plans</valueSetName>
    </valueSet>
</CustomField>