force-app/main/default/objects/Contact/fields/Housing_Plans_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plans_Ranking__c</fullName>
    <formula>IF(
  ISPICKVAL(Housing_Plans__c, &quot;Greek house&quot;), 5, 
  IF(ISPICKVAL(Housing_Plans__c, &quot;Greek residence hall&quot;), 5, 
  IF(ISPICKVAL(Housing_Plans__c, &quot;On campus residence hall&quot;), 5, 
  0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plans Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>