force-app/main/default/objects/Contact/fields/How_did_they_hear_about_opportunities__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_hear_about_opportunities__c</fullName>
    <label>How did you hear about opportunities?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>From an advisor</fullName>
            </value>
            <value>
                <fullName>From a friend</fullName>
            </value>
            <value>
                <fullName>Career Center website</fullName>
            </value>
            <value>
                <fullName>Greek Life Email</fullName>
            </value>
            <value>
                <fullName>Student Organization Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fluent website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TenTask.com</fullName>
            </value>
            <value>
                <fullName>Through a current or previous Amazon Ambassador role</fullName>
            </value>
            <value>
                <fullName>R&amp;B Ambassador Social Media Post</fullName>
            </value>
            <value>
                <fullName>TeamWass Recruiter</fullName>
                <label>#TeamWass Recruiter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>