force-app/main/default/objects/Contact/fields/How_will_you_get_sign_ups__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_get_sign_ups__c</fullName>
    <description>How would you go about talking to at least 40 students a week and getting 15 to sign up for a free HBO Max subscription?</description>
    <label>How will you get sign-ups?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>