force-app/main/default/objects/Contact/fields/I_plan_to_return_Fall_2021_Amazon__c.field-meta.xml
<CustomField>
    <fullName>I_plan_to_return_Fall_2021_Amazon__c</fullName>
    <label>I plan to return Fall 2021 Amazon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>