force-app/main/default/objects/Contact/fields/Initial_Program_Application__c.field-meta.xml
<CustomField>
    <fullName>Initial_Program_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Program Application</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Contacts (Initial Program Application)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>