force-app/main/default/objects/Contact/fields/Initial_Program_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Program_Application_Date__c</fullName>
    <label>Initial Program Application Date</label>
    <type>Date</type>
</CustomField>