force-app/main/default/objects/Contact/fields/Instagram_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Ranking__c</fullName>
    <formula>IF(
  of_Instagram_Followers__c &gt;= 200, 10, 
  IF(of_Instagram_Followers__c &gt;= 100, 5, 
  0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instagram Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>