force-app/main/default/objects/Contact/fields/Intramurals__c.field-meta.xml
<CustomField>
    <fullName>Intramurals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intramurals</label>
    <type>Checkbox</type>
</CustomField>