force-app/main/default/objects/Contact/fields/Joining_Winter_Spring_2022_Program__c.field-meta.xml
<CustomField>
    <fullName>Joining_Winter_Spring_2022_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joining Winter/Spring 2022 Program?</label>
    <type>Checkbox</type>
</CustomField>