force-app/main/default/objects/Contact/fields/Leadership_Positions__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Positions__c</fullName>
    <label>Leadership Positions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>