force-app/main/default/objects/Contact/fields/Major_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Major_Ranking__c</fullName>
    <label>Major Ranking</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>