force-app/main/default/objects/Contact/fields/Most_Recent_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lead_Source__c</fullName>
    <description>Used to determine the latest value in form assembly and whether to update Lead Source field if contact field is blank</description>
    <label>Most Recent Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>