force-app/main/default/objects/Contact/fields/Most_Recent_Program_Application__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Program_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Program Application</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Contacts (Most Recent Program Application)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>