force-app/main/default/objects/Contact/fields/Most_Recent_Program_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Program_Application_Date__c</fullName>
    <label>Most Recent Program Application Date</label>
    <type>Date</type>
</CustomField>