force-app/main/default/objects/Contact/fields/NACA__c.field-meta.xml
<CustomField>
    <fullName>NACA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACA Contact?</label>
    <type>Checkbox</type>
</CustomField>