force-app/main/default/objects/Contact/fields/NACAS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NACAS_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACAS Contact?</label>
    <type>Checkbox</type>
</CustomField>